--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "imagine/imagine",
+    "name": "datingvip/imagine",
     "description": "Image processing for PHP 5.3",
     "keywords": [
         "image manipulation",
